--- a/edsy.css
+++ b/edsy.css
@@ -88,9 +88,16 @@ ABBR {
 	line-height: 0.8;
 	text-decoration: none;
 }
+ABBR.attribute {
+	color: var(--color-orange-5);
+	border-color: var(--color-orange-5);
+	font-size: 87.5%;
+	font-family: var(--font-text);
+}
 
 SMALL {
 	font-size: 75%;
+	color: var(--color-grey-4);
 }
 
 SVG.filter {
@@ -175,6 +182,7 @@ SELECT {
 	font-size: 87.5%;
 }
 SELECT:disabled {
+	border-color: transparent;
 	background-color: transparent;
 	color: inherit;
 	cursor: auto;
@@ -188,6 +196,8 @@ OPTGROUP {
 OPTION {
 	background-color: var(--color-grey-5);
 	color: black;
+	margin: 0;
+	padding: 0 0.25em;
 }
 OPTION:disabled {
 	color: var(--color-grey-2);
@@ -268,6 +278,12 @@ BUTTON.icon.blueprintBest:disabled {
 
 .icon.fileDelete {
 	background-image: url(data:image/gif;base64,R0lGODlhDQANAIAAAP///////yH5BAEKAAEALAAAAAANAA0AAAIejIEJFup6mlyL0Sktvvry6GXgxpCfKaLVsbJl8zAFADs=);
+}
+.icon.fileExport {
+	background-image: url(data:image/gif;base64,R0lGODlhDQANAIABAP///wAAACH5BAEKAAEALAAAAAANAA0AAAIajA+nCr3c3EMv2ispXGkz3mlIOAVZeU7YChQAOw==);
+}
+.icon.fileImport {
+	background-image: url(data:image/gif;base64,R0lGODlhDQANAIABAP///wAAACH5BAEKAAEALAAAAAANAA0AAAIajA+nm+vtFESg2msZm4FXmhkfKHlbVKIgxhYAOw==);
 }
 .icon.fileReload {
 	background-image: url(data:image/gif;base64,R0lGODlhDQANAIAAAP///////yH5BAEKAAEALAAAAAANAA0AAAIfjA15AZevFGsLzoUewxNS50kcOGIfR4nVp16rV2pLAQA7);
@@ -760,9 +776,6 @@ BUTTON.icon.blueprintBest:disabled {
 	font-size: 87.5%;
 }
 
-#shipyard_container SMALL {
-	color: var(--color-grey-4);
-}
 #shipyard_container SMALL:not(.semantic) {
 	display: none;
 }
@@ -878,16 +891,21 @@ BUTTON.icon.blueprintBest:disabled {
 #outfitting_modules.STORED .row:not(.stored),
 #outfitting_modules.hardpoint .group:not(.hardpoint),
 #outfitting_modules.hardpoint .group > HEADER,
+#outfitting_modules.hardpoint .row.stored,
 #outfitting_modules.utility .group:not(.utility),
 #outfitting_modules.utility .group > HEADER,
+#outfitting_modules.utility .row.stored,
 #outfitting_modules.component .group:not(.component):not(.internal),
 #outfitting_modules.component .group > HEADER,
 #outfitting_modules.component .mtype.internal:not(.cft),
+#outfitting_modules.component .row.stored,
 #outfitting_modules.military .group:not(.internal),
 #outfitting_modules.military .group > HEADER,
 #outfitting_modules.military .mtype:not(.ihrp):not(.imahrp):not(.imrp):not(.iscb),
+#outfitting_modules.military .row.stored,
 #outfitting_modules.internal .group:not(.internal),
 #outfitting_modules.internal .group > HEADER,
+#outfitting_modules.internal .row.stored,
 #outfitting_modules.SLOT #outfitting_modules_picker.hardpoint .group > HEADER,
 #outfitting_modules.SLOT #outfitting_modules_picker.utility .group > HEADER,
 #outfitting_modules.SLOT #outfitting_modules_picker.component .group > HEADER,
@@ -1294,9 +1312,24 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	flex: 100 1 auto;
 }
 
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON {
+
+.outfitting_stats_panel .nopad {
+	padding: 0;
+}
+
+.outfitting_powerdist {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: flex-end;
+}
+
+.outfitting_powerdist BUTTON {
 	flex: 0 0 auto;
+		display: inline-block;
+		vertical-align: bottom;
 	min-width: 23px;
+	height: 100%;
 	margin: 0 1px;
 	border: none;
 	padding: 0;
@@ -1304,27 +1337,27 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	font-size: 62.5%;
 }
 
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON DIV:first-child {
-	height: 7px;
+.outfitting_powerdist BUTTON DIV:first-child {
+	height: 5px;
 	line-height: 0;
 }
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON DIV:last-child {
+.outfitting_powerdist BUTTON DIV:last-child {
 	position: relative;
 	padding: 1px 2px;
 	color: var(--color-orange-5);
 	text-align: center;
 }
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON:active DIV:last-child {
+.outfitting_powerdist BUTTON:active DIV:last-child {
 	background-color: var(--color-orange-5);
 	color: black;
 }
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON:disabled DIV:last-child {
+.outfitting_powerdist BUTTON:disabled DIV:last-child {
 	background-color: transparent;
-	color: var(--color-grey-5);
+	color: var(--color-grey-4);
 }
 
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON#outfitting_fit_powerdist_rst DIV:last-child::before,
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON#outfitting_fit_powerdist_rst DIV:last-child::after {
+.outfitting_powerdist BUTTON#outfitting_fit_powerdist_rst DIV:last-child::before,
+.outfitting_powerdist BUTTON#outfitting_fit_powerdist_rst DIV:last-child::after {
 	content: '';
 	display: block;
 	position: absolute;
@@ -1333,73 +1366,73 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	height: 2px;
 	border: 1px solid var(--color-orange-5);
 }
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON#outfitting_fit_powerdist_rst DIV:last-child::before {
+.outfitting_powerdist BUTTON#outfitting_fit_powerdist_rst DIV:last-child::before {
 	top: 0;
 	border-bottom: none;
 }
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON#outfitting_fit_powerdist_rst DIV:last-child::after {
+.outfitting_powerdist BUTTON#outfitting_fit_powerdist_rst DIV:last-child::after {
 	bottom: 0;
 	border-top: none;
 }
 
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON SPAN {
+.outfitting_powerdist BUTTON SPAN {
 	display: inline-block;
 	width: 5px;
 	height: 5px;
-	margin: 1px 0 0 1px;
+	margin-left: 1px;
 	border: 2px solid var(--color-orange-1);
 	border-radius: 2px;
 	background-color: var(--color-orange-1);
 }
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON SPAN:first-child {
+.outfitting_powerdist BUTTON SPAN:first-child {
 	margin-left: 0;
 }
 
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist1 SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist3 SPAN:nth-child(2),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist5 SPAN:nth-child(3),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist7 SPAN:nth-child(4) {
+.outfitting_powerdist BUTTON.dist1 SPAN:nth-child(1),
+.outfitting_powerdist BUTTON.dist3 SPAN:nth-child(2),
+.outfitting_powerdist BUTTON.dist5 SPAN:nth-child(3),
+.outfitting_powerdist BUTTON.dist7 SPAN:nth-child(4) {
 	border-color: var(--color-orange-3);
 	background-color: var(--color-orange-3);
 }
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist2 SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist3 SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist4 SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist5 SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist6 SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist7 SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist8 SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist4 SPAN:nth-child(2),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist5 SPAN:nth-child(2),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist6 SPAN:nth-child(2),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist7 SPAN:nth-child(2),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist8 SPAN:nth-child(2),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist6 SPAN:nth-child(3),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist7 SPAN:nth-child(3),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist8 SPAN:nth-child(3),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.dist8 SPAN:nth-child(4) {
+.outfitting_powerdist BUTTON.dist2 SPAN:nth-child(1),
+.outfitting_powerdist BUTTON.dist3 SPAN:nth-child(1),
+.outfitting_powerdist BUTTON.dist4 SPAN:nth-child(1),
+.outfitting_powerdist BUTTON.dist5 SPAN:nth-child(1),
+.outfitting_powerdist BUTTON.dist6 SPAN:nth-child(1),
+.outfitting_powerdist BUTTON.dist7 SPAN:nth-child(1),
+.outfitting_powerdist BUTTON.dist8 SPAN:nth-child(1),
+.outfitting_powerdist BUTTON.dist4 SPAN:nth-child(2),
+.outfitting_powerdist BUTTON.dist5 SPAN:nth-child(2),
+.outfitting_powerdist BUTTON.dist6 SPAN:nth-child(2),
+.outfitting_powerdist BUTTON.dist7 SPAN:nth-child(2),
+.outfitting_powerdist BUTTON.dist8 SPAN:nth-child(2),
+.outfitting_powerdist BUTTON.dist6 SPAN:nth-child(3),
+.outfitting_powerdist BUTTON.dist7 SPAN:nth-child(3),
+.outfitting_powerdist BUTTON.dist8 SPAN:nth-child(3),
+.outfitting_powerdist BUTTON.dist8 SPAN:nth-child(4) {
 	border-color: var(--color-orange-5);
 	background-color: var(--color-orange-5);
 }
 
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.crew1 SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.crew2 SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.crew3 SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.crew4 SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.crew2 SPAN:nth-child(2),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.crew3 SPAN:nth-child(2),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.crew4 SPAN:nth-child(2),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.crew4 SPAN:nth-child(3),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.crew4 SPAN:nth-child(3),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON.crew4 SPAN:nth-child(4) {
+.outfitting_powerdist BUTTON.crew1 SPAN:nth-child(1),
+.outfitting_powerdist BUTTON.crew2 SPAN:nth-child(1),
+.outfitting_powerdist BUTTON.crew3 SPAN:nth-child(1),
+.outfitting_powerdist BUTTON.crew4 SPAN:nth-child(1),
+.outfitting_powerdist BUTTON.crew2 SPAN:nth-child(2),
+.outfitting_powerdist BUTTON.crew3 SPAN:nth-child(2),
+.outfitting_powerdist BUTTON.crew4 SPAN:nth-child(2),
+.outfitting_powerdist BUTTON.crew4 SPAN:nth-child(3),
+.outfitting_powerdist BUTTON.crew4 SPAN:nth-child(3),
+.outfitting_powerdist BUTTON.crew4 SPAN:nth-child(4) {
 	border-color: var(--color-blue-5);
 	background-color: var(--color-blue-5);
 }
 
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON:not(.crew4):not(.crew3):not(.crew2):not(.crew1) .crewpips SPAN:nth-child(1),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON:not(.crew4):not(.crew3):not(.crew2) .crewpips SPAN:nth-child(2),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON:not(.crew4):not(.crew3) .crewpips SPAN:nth-child(3),
-#outfitting_fit_slots .outfitting_fit_powerdist BUTTON:not(.crew4) .crewpips SPAN:nth-child(4) {
+.outfitting_powerdist BUTTON:not(.crew4):not(.crew3):not(.crew2):not(.crew1) .crewpips SPAN:nth-child(1),
+.outfitting_powerdist BUTTON:not(.crew4):not(.crew3):not(.crew2) .crewpips SPAN:nth-child(2),
+.outfitting_powerdist BUTTON:not(.crew4):not(.crew3) .crewpips SPAN:nth-child(3),
+.outfitting_powerdist BUTTON:not(.crew4) .crewpips SPAN:nth-child(4) {
 	display: none;
 }
 
@@ -1418,6 +1451,7 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 
 #outfitting_fit.nomass .outfitting_fit_mass,
 #outfitting_fit.nopower .outfitting_fit_pwrdraw,
+#outfitting_fit.noattrs .outfitting_fit_attrs,
 #outfitting_fit.noprice .outfitting_fit_price {
 	display: none;
 }
@@ -1425,7 +1459,7 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 #outfitting_fit_slots TH {
 	padding: 0 0.25em;
 	font-weight: bold;
-	text-align: left;
+	text-align: right;
 	white-space: nowrap;
 }
 #outfitting_fit_slots THEAD TH {
@@ -1448,8 +1482,8 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	text-align: right;
 	white-space: nowrap;
 }
-#outfitting_fit_slots #outfitting_fit_ship_hull TD,
-#outfitting_fit_slots #outfitting_fit_ship_hatch TD {
+#outfitting_fit_slots #outfitting_fit_ship_hull TR:first-child TD,
+#outfitting_fit_slots #outfitting_fit_ship_hatch TR:first-child TD {
 	padding-top: 0.5em;
 }
 
@@ -1459,8 +1493,25 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	text-align: center;
 }
 #outfitting_fit_slots TH:nth-child(2),
-#outfitting_fit_slots TD:nth-child(2) {
+#outfitting_fit_slots TH:nth-child(5),
+#outfitting_fit_slots TD:nth-child(2),
+#outfitting_fit_slots TD:nth-child(5) {
 	text-align: left;
+}
+
+#outfitting_fit_slots .outfitting_fit_mass SMALL:not(.semantic),
+#outfitting_fit_slots .outfitting_fit_pwrdraw SMALL:not(.semantic),
+#outfitting_fit_slots .outfitting_fit_price SMALL:not(.semantic) {
+	display: none;
+}
+
+#outfitting_fit_slots TH.outfitting_fit_attrs LABEL.checkbox ABBR { /* TODO? */
+	border-color: black;
+	margin: 0 0.25em;
+}
+
+#outfitting_fit_slots TH.outfitting_fit_attrs SELECT {
+	font-size: 75%;
 }
 
 #outfitting_fit_slots .togglebutton {
@@ -1778,8 +1829,51 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 
 
 /*
-* OUTFITTING DETAILSDETAILS BLOCK
+* OUTFITTING DETAILS BLOCK
 */
+
+#outfitting_details_settings {
+	flex: 0 0 auto;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	font-size: 87.5%;
+}
+
+#outfitting_details_settings > * {
+	flex: 0 0 auto;
+}
+
+#outfitting_details_settings SELECT {
+	flex: 0 1 auto;
+	font-size: 87.5%;
+}
+
+#outfitting_details_settings BUTTON {
+	margin-left: 0.2em;
+	border: 1px solid transparent;
+	padding: 3px;
+	background-color: transparent;
+	line-height: 0;
+}
+#outfitting_details_settings BUTTON:active {
+	border-color: white;
+	background-color: white;
+}
+#outfitting_details_settings BUTTON:disabled {
+	border-color: transparent;
+	background-color: transparent;
+}
+
+#outfitting_details_settings BUTTON .icon {
+	filter: url(#tint_orange_5);
+}
+#outfitting_details_settings BUTTON:active .icon {
+	filter: invert(100%);
+}
+#outfitting_details_settings BUTTON:disabled .icon {
+	filter: brightness(70%);
+}
 
 
 #outfitting_details_container {
@@ -1933,6 +2027,10 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 
 .outfitting_stats_panel {
 	flex: 1 0 auto;
+	border-right: 2px solid var(--color-orange-3);
+}
+.outfitting_stats_panel:last-child {
+	border-right: none;
 }
 
 .outfitting_stats_panel .error {
@@ -1942,9 +2040,6 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	border-color: var(--color-red-5);
 }
 
-.outfitting_stats_panel SMALL {
-	color: var(--color-grey-4);
-}
 .outfitting_stats_panel .error SMALL {
 	color: var(--color-red-4);
 }
@@ -1962,29 +2057,21 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	text-align: right;
 }
 #outfitting_stats INPUT.toggleinput:not(:checked) + .outfitting_stats_panel TH:not(:first-child),
-#outfitting_stats INPUT.toggleinput:not(:checked) + .outfitting_stats_panel TD:not(:first-child) {
+#outfitting_stats INPUT.toggleinput:not(:checked) + .outfitting_stats_panel TD:not(:first-child),
+#outfitting_stats INPUT.toggleinput:not(:checked) + .outfitting_stats_panel TBODY ABBR,
+#outfitting_stats INPUT.toggleinput:not(:checked) + .outfitting_stats_panel .outfitting_stats_powerbar DIV,
+#outfitting_stats INPUT.toggleinput:not(:checked) + .outfitting_stats_panel .outfitting_stats_powerbar SPAN {
 	display: none;
 }
 
-#outfitting_stats INPUT.toggleinput:not(:checked) + .outfitting_stats_panel TBODY ABBR,
-#outfitting_stats INPUT.toggleinput:not(:checked) + .outfitting_stats_panel .outfitting_stats_power DIV,
-#outfitting_stats INPUT.toggleinput:not(:checked) + .outfitting_stats_panel .outfitting_stats_power SPAN {
-	visibility: hidden;
-}
-
 .outfitting_stats_panel THEAD TH {
-	padding-left: 0;
 	background-color: var(--color-orange-5);
 	color: black;
 	text-align: right;
 	font-weight: bold;
 }
-.outfitting_stats_panel THEAD TH:first-child {
-	border-left: 2px solid var(--color-orange-5);
-}
 #outfitting_stats INPUT.toggleinput:not(:checked) + .outfitting_stats_panel THEAD TH:first-child {
 	background-color: var(--color-orange-1);
-	border-color: var(--color-orange-3);
 	color: var(--color-orange-3);
 }
 #outfitting_stats INPUT.toggleinput:active + .outfitting_stats_panel THEAD TH:first-child {
@@ -2016,14 +2103,8 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	text-align: right;
 	font-weight: bold;
 }
-.outfitting_stats_panel TBODY TH:first-child {
-	border-left: 2px solid var(--color-orange-3);
-}
 .outfitting_stats_panel TBODY TH.header {
 	text-align: center;
-}
-.outfitting_stats_panel:first-of-type TH:first-child {
-	border: none;
 }
 
 .outfitting_stats_panel THEAD TD ABBR,
@@ -2043,15 +2124,16 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	font-size: 87.5%;
 }
 
-.outfitting_stats_panel .outfitting_stats_power {
+.outfitting_stats_panel .outfitting_stats_powerbar {
 	position: relative;
+	margin-right: 0.25em;
 }
-.outfitting_stats_panel .outfitting_stats_power::before {
+.outfitting_stats_panel .outfitting_stats_powerbar::before {
 	display: inline;
 	content: '\200B';
 }
 
-.outfitting_stats_panel .outfitting_stats_power SPAN.marker {
+.outfitting_stats_panel .outfitting_stats_powerbar SPAN.marker {
 	pointer-events: none;
 	position: absolute;
 	z-index: 3;
@@ -2061,12 +2143,12 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	border-right: 1px solid var(--color-red-5);
 	padding-right: 3px;
 }
-.outfitting_stats_panel .outfitting_stats_power SPAN.marker:first-of-type {
+.outfitting_stats_panel .outfitting_stats_powerbar SPAN.marker:first-of-type {
 	right: 55%;
 	border-color: var(--color-blue-5);
 }
 
-.outfitting_stats_panel .outfitting_stats_power DIV {
+.outfitting_stats_panel .outfitting_stats_powerbar DIV {
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -2077,14 +2159,24 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	text-align: left;
 	line-height: 1px;
 }
-.outfitting_stats_panel .outfitting_stats_power DIV:first-of-type {
+.outfitting_stats_panel .outfitting_stats_powerbar DIV:first-of-type {
 	top: -1px;
 }
-.outfitting_stats_panel .outfitting_stats_power DIV:last-of-type {
+.outfitting_stats_panel .outfitting_stats_powerbar DIV:last-of-type {
 	bottom: -1px;
 }
+.outfitting_stats_panel .outfitting_stats_powerbar DIV:first-of-type,
+.outfitting_stats_panel .outfitting_stats_powerbar DIV:last-of-type {
+	top: 2px;
+	bottom: 2px;
+	height: auto;
+}
+.outfitting_stats_panel .outfitting_stats_powerbar SPAN.marker {
+	top: 0;
+	bottom: 0;
+}
 
-.outfitting_stats_panel .outfitting_stats_power DIV SPAN.overload {
+.outfitting_stats_panel .outfitting_stats_powerbar DIV SPAN.overload {
 	position: absolute;
 	z-index: 1;
 	top: 0;
@@ -2094,7 +2186,7 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	background-color: var(--color-red-2);
 }
 
-.outfitting_stats_panel .outfitting_stats_power ABBR {
+.outfitting_stats_panel .outfitting_stats_powerbar ABBR {
 	display: inline-block;
 	position: relative;
 	z-index: 2;
@@ -2110,13 +2202,22 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	overflow: hidden;
 	text-align: center;
 }
-.outfitting_stats_panel .outfitting_stats_power ABBR.okay {
+.outfitting_stats_panel .outfitting_stats_powerbar ABBR.okay {
 	border-right: 2px solid var(--color-blue-3);
 	background-color: var(--color-blue-4);
 }
-.outfitting_stats_panel .outfitting_stats_power ABBR.error {
+.outfitting_stats_panel .outfitting_stats_powerbar ABBR.error {
 	border-right: 2px solid var(--color-red-3);
 	background-color: var(--color-red-4);
+}
+
+.outfitting_stats_panel .outfitting_stats_powerbar ABBR SPAN {
+	display: inline-block;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 50%;
+	margin-top: -0.4em;
 }
 
 
